Avoid auto-wrapping titles on Proposal and Author reports (Monthly view mode)

--- a/cmd/dcrdata/public/scss/global.scss
+++ b/cmd/dcrdata/public/scss/global.scss
@@ -1667,6 +1667,10 @@ hr {
   min-width: 2em;
 }
 
+.mw-75px {
+  min-width: 75px;
+}
+
 .w-max {
   width: -moz-max-content;
   width: max-content;
